fix burger alignment issue

--- a/assets/css/hzi.css
+++ b/assets/css/hzi.css
@@ -60,6 +60,15 @@ h4, h5, h6 {
 .nav-bar ul {
     background-color: #002b4f;
 }
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 2em;
+}
+
 .endofpage { 
   background-color: #002b4f;
 }
@@ -112,8 +121,7 @@ MIT License*/
 #menuToggle {
   display: inline-block;
   position: inline;
-  top: 50px;
-  left: 50px;
+  margin-top: .75em;
   
   z-index: 1;
   
@@ -138,8 +146,6 @@ MIT License*/
   width: 40px;
   height: 32px;
   position: absolute;
-  top: -7px;
-  left: -5px;
   
   cursor: pointer;
   
@@ -199,7 +205,7 @@ MIT License*/
 #menu {
   position: absolute;
   width: 300px;
-  margin: -100px 0 0 -50px;
+  margin: -100px 0 0 -5em;
   padding: 50px;
   padding-top: 125px;
   
@@ -230,3 +236,4 @@ MIT License*/
  code.language-json {
   font-size: 85%;
 }
+
